# mlopls-pmldl

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
code/deployment/: compose.yaml  deployment.compose.yaml
code/deployment/api/: Dockerfile  app.py  requirements.txt
code/deployment/app/: Dockerfile  app.py  pydantic_models.py  requirements.txt
code/deployment/mlflow_api/: Dockerfile
code/deployment/mlflow_api/model_dir/: MLmodel  conda.yaml  input_example.json  registered_model_meta  requirements.txt  serving_input_example.json
code/deployment/mlflow_api/model_dir/data/: model.pth
code/models/: BasicModel.pt  Dockerfile  basic_model.py  docker-compose.yaml  init.sh  requirements.txt  training.py
code/models/encoders/: cat_columns.json
code/models/mlflow_api/: Dockerfile
code/models/mlflow_api/model_dir/: MLmodel  conda.yaml  inference.py  python_env.yaml  registered_model_meta  requirements.txt
code/models/mlflow_api/model_dir/artifacts/: BasicModel.pt
data/processed/: preprocesser.pkl
notebooks/: EDA.ipynb  mlflow.ipynb  model_best.pt  models.ipynb  preprocess.ipynb
notebooks/mlruns/0/: meta.yaml
services/airflow/: Dockerfile  advanced_air.docker-compose.yaml  airflow.cfg  airflow.docker-compose.yaml  requirements.txt  zens.txt
services/airflow/dags/: data_processing_dag.py  servers_dag.py
services/zenml/pipelines/: data_pipelines.py  inference_pipeline.py  training_pipeline.py  training_pipelines.py
services/zenml/pipelines/steps/: basic_preprocessing.py  preprocessing.py
(+8 files in other folders)
