[tool.poetry]
name = "mloplspmldl"
version = "0.1.0"
description = "A brief description of your project"
authors = ["Ilia Mistiurin"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
zenml = { version = "*", extras = ["server"] }
apache-airflow = "*"
apache-airflow-providers-docker = "*"
pendulum = "2.0.0"
mlflow = "*"
gunicorn = "*"
uvicorn = "*"
fastapi = "*"
python-dotenv = "*"
streamlit = "1.38.0"
pandas = "2.2.2"
matplotlib = "3.9.2"
seaborn = "0.13.2"
torch = "2.2.2"
numpy = "1.26.4"
jupyter = "1.1.1"
poetry = "1.8.3"
psycopg2-binary = "*"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
pytest = "^6.2.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"